--- a/src/mdFormBuilder.css
+++ b/src/mdFormBuilder.css
@@ -11,8 +11,9 @@ md-select.md-default-theme .md-select-value.md-select-placeholder, md-select .md
 }
 
 #FormBuilder .angular-notifications-icon {
-  right: -22px;
-  top: 2px;
+  position: absolute;
+  right: 10px;
+  top: 14px;
   font-size: 12px;
   font-weight: bold;
   border-radius: 50%;
@@ -30,6 +31,7 @@ md-select.md-default-theme .md-select-value.md-select-placeholder, md-select .md
   user-select: none;
   cursor: default;
 }
+
 #FormBuilder .angular-notifications-icon div {
   margin-top: -2px;
 }
@@ -82,6 +84,11 @@ md-input-container.md-has-icon {
 .FormBuilderMsg.error { background: #DE3641; }
 .FormBuilderMsg.success { background: rgb(0,150,136); }
 .FormBuilderMsg.processing { background: #00ffff; color: #555; }
+
+.errorTab .angular-notifications-container {
+  margin-left: -10px;
+  margin-right: 10px;
+}
 
 md-input-container [disabled], .fieldDisabled{
 	color: #bbb !important;
